download.css
*{
    margin: 0px;
    padding: 0px;
}

body {
    background-image: url('downloadbg.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    /* width: 100%; 
    height: 100%;
    max-height: 100%;
    max-width: 90%; */
}

.logo{
    height: 10rem;
    /* width: 100%; */
    margin: 4%;
    /* position: fixed; */
    
    background-image: url('ioc-logo.png');
    /* background-attachment: fixed; */
    background-repeat: no-repeat;
    background-size: 17rem; 
    background-position-x: center;
    background-position-y: center;

    backdrop-filter: blur(20px);
    background-color: rgba(0, 0, 0, 0.6);
    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 15px;
    /* background-color: blueviolet; */
}

.banner{
    height: auto;
    /* width: 100%; */
    margin: 4%;

    color: white;
    text-align: center;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 2rem;
    font-weight: bold;

    /* max-width: 90%; */
    padding: 7%;

    backdrop-filter: blur(20px);
    background-color: rgba(0, 0, 0, 0.6);
    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 15px;
}

.photo{
    /* max-width: 100%; */
    height: auto;
    /* height: 5rem;
    width: 5rem; */
    object-fit: fill;
    display: flex;
    justify-content:center;
    /* padding: 10px;
    margin: 0px; */
    
}

.banner p{
    /* padding-top: 5%; */
    color: white;
    font-size: large;
}


.features{
    /* width: 100%; */
    margin: 4%;
    color: white;
    text-align: center;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 2rem;
    /* max-width: 90%; */
    padding: 7%;

    backdrop-filter: blur(20px);
    background-color: rgba(0, 0, 0, 0.6);
    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 15px;
    
}

.features .container{
    /* border: 2px solid red; */
    padding: 5%;
    margin: 5%;
    margin-top: 0;
    
    font-size: large;
    
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2.5rem;
    
}

.features .container .gridBlock{
    padding: 2%;
    margin: 5%;
    width: 16rem;
    height: 16rem;
    
    
    /* border: 2px solid green; */
}

.features .container .gridBlock .gridimg{
    border: 2px solid blue;
    border-radius: 7.5rem;;
    height: 13rem;
    width: 13rem;

    margin: auto;
}

.features .container .gridBlock p{
    padding-top: 5%;
}

.download{
    margin: auto;
    /* width: 100%; */
    display: flex;
    align-items: center;
    justify-content: center;
    /* border: 2px solid red; */

    
    /* border: 2px solid red; */
}

.download .btn{
    /* padding-top: 4%;
    padding-bottom: 4%; */
    padding: auto;
    width: 15rem;
    height: 80px;
    border-radius: 40px;
    border: 2px solid black;
    border-style: solid;
    color: whitesmoke;
    text-align: center;
    
    background-image: linear-gradient(37deg, rgb(242, 111, 4), rgb(236, 74, 234));
    cursor: pointer;
    
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: x-large;
    letter-spacing: 2;

}

footer{
    margin-top: 4% ;
    width: auto;
    color: white;
    height: auto;
    background-color: black;
    border-top: 2px solid white;
}

footer ul{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;

    list-style-type: none;
    padding: 4%;
    display: flex;
    flex-wrap: wrap;
    gap: 10%;
    justify-content: space-evenly;
}

footer ul li{
    padding: 2%;
}

.copyright{
    text-align: center;
    font-size: small;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    padding: 2%;
    padding-bottom: 5%;
}

/* @media only screen and (min-width: 767px){
    .banner{
        font-size: xx-large;
    }
} */

